[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/tiles/heartHalf.png" type="Texture" id=1]
[ext_resource path="res://levels/ui/Hearts.gd" type="Script" id=3]

[node name="Hearts" type="Control"]
margin_bottom = 48.0
script = ExtResource( 3 )

[node name="Hearts2D" type="Node2D" parent="."]
position = Vector2( 0, 48 )
scale = Vector2( 4, 4 )

[node name="Heart1" type="Sprite" parent="Hearts2D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -20, 0 )
texture = ExtResource( 1 )

[node name="Heart2" type="Sprite" parent="Hearts2D"]
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="Heart3" type="Sprite" parent="Hearts2D"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 20, 0 )
texture = ExtResource( 1 )
